prepare api
